# hyperfine

./: Cargo.toml
src/hyperfine/: mod.rs
timer/: Cargo.toml
timer/src/: internal.rs  lib.rs  unix_timer.rs  wallclocktimer.rs  windows_timer.rs
